--- a/docker-compose-all-roles-with-graphics.yml
+++ b/docker-compose-all-roles-with-graphics.yml
@@ -54,7 +54,7 @@ services:
         ports:
          - "5671:5671"
          - "15671:15671"
-        image: "${DOCKER_REGISTRY}/wres/wres-broker:BROKER_IMAGE"
+        image: "${DOCKER_REGISTRY}/wres/wres-broker:20210225-713c981"
         restart: always
         volumes:
          # For certificates and keys that correspond to them:
@@ -71,7 +71,7 @@ services:
         healthcheck:
             start_period: 5m
     worker:
-        image: "${DOCKER_REGISTRY}/wres/wres-worker:20210225-713c981"
+        image: "${DOCKER_REGISTRY}/wres/wres-worker:20210225-ab630d0"
         restart: always
         depends_on:
          - "broker"
