--- a/docker-compose-all-roles-with-graphics.template.yml
+++ b/docker-compose-all-roles-with-graphics.template.yml
@@ -60,7 +60,7 @@ services:
          # For certificates and keys that correspond to them:
          - /mnt/wres_keys:/wres_secrets:ro
         environment:
-         - RABBITMQ_CONFIG_FILE=rabbitmq${WRES_ENV_SUFFIX}.config
+         - RABBITMQ_CONFIG_FILE=rabbitmq.config
         # rabbitmq.conf should have 360m specified as high watermark
         mem_limit: 720m
         cap_drop:
