Change version of zips when an in-WRES module changes
This also changes the jar version when no code changes in that jar
actually happened, but this is still safer than the alternative.

There is probably a more gradle-y way to do this by accessing each
application's modules/components/dependencies as well.

Another improvement might be to split the application/zip blocks
away from the library/jar blocks, such that zip versions vary when
jar versions vary and jar versions only vary when code in the jar
varies.

Refs #88672

--- a/build.gradle
+++ b/build.gradle
@@ -671,6 +671,36 @@ project(':wres-vis')
 
         testRuntime files('dist/lib/conf')
     }
+
+
+    // Check if the dependency modules version is later. If so, update this
+    // module to that later version.
+    def gitCommitOfDependencies = grgit.log(paths: ['wres-datamodel',
+                                                    'wres-util',
+                                                    'wres-eventsbroker',
+                                                    'wres-events'], maxCommits:1).find()
+
+    // Null check in case there is a new module with no history
+    if( gitCommitOfDependencies != null )
+    {
+        def gitCommitIdOfDependencies = gitCommitOfDependencies.id;
+        def gitCommitDateOfDependencies = gitCommitOfDependencies.dateTime.withZoneSameInstant( ZoneId.of( "UTC" ) )
+
+        def gitCommitOfThisModule = grgit.log( paths: [project.name], maxCommits:1 ).find()
+        def gitCommitDateOfThisModule = gitCommitOfThisModule.dateTime.withZoneSameInstant( ZoneId.of( "UTC" ) )
+
+        def versionOfDependencies = gitCommitDateOfDependencies.format('yyyyMMdd') + '-' + gitCommitIdOfDependencies[0..6]
+
+        if ( gitCommitDateOfDependencies.isAfter( gitCommitDateOfThisModule ) )
+        {
+            version = versionOfDependencies
+
+            if ( !grgit.status().isClean() )
+            {
+                version = version + '-dev'
+            }
+        }
+    }
 }
 
 project(':wres-config')
@@ -890,6 +920,32 @@ project(':wres-worker')
             }
         }
     }
+
+    // Check if the dependency modules version is later. If so, update this
+    // module to that later version.
+    def gitCommitOfDependencies = grgit.log(paths: ['wres-messages'], maxCommits:1).find()
+
+    // Null check in case there is a new module with no history
+    if( gitCommitOfDependencies != null )
+    {
+        def gitCommitIdOfDependencies = gitCommitOfDependencies.id;
+        def gitCommitDateOfDependencies = gitCommitOfDependencies.dateTime.withZoneSameInstant( ZoneId.of( "UTC" ) )
+
+        def gitCommitOfThisModule = grgit.log( paths: [project.name], maxCommits:1 ).find()
+        def gitCommitDateOfThisModule = gitCommitOfThisModule.dateTime.withZoneSameInstant( ZoneId.of( "UTC" ) )
+
+        def versionOfDependencies = gitCommitDateOfDependencies.format('yyyyMMdd') + '-' + gitCommitIdOfDependencies[0..6]
+
+        if ( gitCommitDateOfDependencies.isAfter( gitCommitDateOfThisModule ) )
+        {
+            version = versionOfDependencies
+
+            if ( !grgit.status().isClean() )
+            {
+                version = version + '-dev'
+            }
+        }
+    }
 }
 
 project(':wres-tasker')
@@ -989,6 +1045,33 @@ project(':wres-tasker')
                     // Note: see lengthy note in main application below
                     ['dist']
                 }
+            }
+        }
+    }
+
+
+    // Check if the dependency modules version is later. If so, update this
+    // module to that later version.
+    def gitCommitOfDependencies = grgit.log(paths: ['wres-messages'], maxCommits:1).find()
+
+    // Null check in case there is a new module with no history
+    if( gitCommitOfDependencies != null )
+    {
+        def gitCommitIdOfDependencies = gitCommitOfDependencies.id;
+        def gitCommitDateOfDependencies = gitCommitOfDependencies.dateTime.withZoneSameInstant( ZoneId.of( "UTC" ) )
+
+        def gitCommitOfThisModule = grgit.log( paths: [project.name], maxCommits:1 ).find()
+        def gitCommitDateOfThisModule = gitCommitOfThisModule.dateTime.withZoneSameInstant( ZoneId.of( "UTC" ) )
+
+        def versionOfDependencies = gitCommitDateOfDependencies.format('yyyyMMdd') + '-' + gitCommitIdOfDependencies[0..6]
+
+        if ( gitCommitDateOfDependencies.isAfter( gitCommitDateOfThisModule ) )
+        {
+            version = versionOfDependencies
+
+            if ( !grgit.status().isClean() )
+            {
+                version = version + '-dev'
             }
         }
     }
