Continue to consider build.gradle versions when generating versions
Refs #88672

--- a/build.gradle
+++ b/build.gradle
@@ -89,30 +89,14 @@ subprojects
     targetCompatibility = '11'
 
     // Each module does not need a version update unless code in it has changed.
-    def gitCommit = grgit.log(paths: [project.name], maxCommits:1).find()
+    def gitCommit = grgit.log(paths: [project.name, 'build.gradle'], maxCommits:1).find()
     // Null check in case there is a new module with no history
     if( gitCommit != null )
     {
         def gitCommitId = gitCommit.id;
         def gitCommitDate = gitCommit.dateTime.withZoneSameInstant( ZoneId.of( "UTC" ) )
 
-        // ...Or if this build script which controls dependencies has changed.
-        def gitCommitOfThis = grgit.log( paths: ['build.gradle'], maxCommits:1 ).find()
-        def gitCommitIdOfThis = gitCommitOfThis.id
-        def gitCommitDateOfThis = gitCommitOfThis.dateTime.withZoneSameInstant( ZoneId.of( "UTC" ) )
-
         version = gitCommitDate.format('yyyyMMdd') + '-' + gitCommitId[0..6]
-
-        // If the build script tip commit has a later date, use that instead.
-        // This means we have multiple unneeded version updates of submodule
-        // versions but will not have the converse. The version will change when
-        // changes really did happen, whether to the module or this build script.
-        def versionOfThis = gitCommitDateOfThis.format( 'yyyyMMdd' ) + '-' + gitCommitIdOfThis[0..6]
-
-        if ( gitCommitDateOfThis.isAfter( gitCommitDate ) )
-        {
-            version = versionOfThis
-        }
     }
     // Default version string for new module with no history
     else
@@ -686,7 +670,7 @@ project(':wres-vis')
         def gitCommitIdOfDependencies = gitCommitOfDependencies.id;
         def gitCommitDateOfDependencies = gitCommitOfDependencies.dateTime.withZoneSameInstant( ZoneId.of( "UTC" ) )
 
-        def gitCommitOfThisModule = grgit.log( paths: [project.name], maxCommits:1 ).find()
+        def gitCommitOfThisModule = grgit.log( paths: [project.name, 'build.gradle'], maxCommits:1 ).find()
         def gitCommitDateOfThisModule = gitCommitOfThisModule.dateTime.withZoneSameInstant( ZoneId.of( "UTC" ) )
 
         def versionOfDependencies = gitCommitDateOfDependencies.format('yyyyMMdd') + '-' + gitCommitIdOfDependencies[0..6]
@@ -931,7 +915,7 @@ project(':wres-worker')
         def gitCommitIdOfDependencies = gitCommitOfDependencies.id;
         def gitCommitDateOfDependencies = gitCommitOfDependencies.dateTime.withZoneSameInstant( ZoneId.of( "UTC" ) )
 
-        def gitCommitOfThisModule = grgit.log( paths: [project.name], maxCommits:1 ).find()
+        def gitCommitOfThisModule = grgit.log( paths: [project.name, 'build.gradle'], maxCommits:1 ).find()
         def gitCommitDateOfThisModule = gitCommitOfThisModule.dateTime.withZoneSameInstant( ZoneId.of( "UTC" ) )
 
         def versionOfDependencies = gitCommitDateOfDependencies.format('yyyyMMdd') + '-' + gitCommitIdOfDependencies[0..6]
@@ -1060,7 +1044,7 @@ project(':wres-tasker')
         def gitCommitIdOfDependencies = gitCommitOfDependencies.id;
         def gitCommitDateOfDependencies = gitCommitOfDependencies.dateTime.withZoneSameInstant( ZoneId.of( "UTC" ) )
 
-        def gitCommitOfThisModule = grgit.log( paths: [project.name], maxCommits:1 ).find()
+        def gitCommitOfThisModule = grgit.log( paths: [project.name,'build.gradle'], maxCommits:1 ).find()
         def gitCommitDateOfThisModule = gitCommitOfThisModule.dateTime.withZoneSameInstant( ZoneId.of( "UTC" ) )
 
         def versionOfDependencies = gitCommitDateOfDependencies.format('yyyyMMdd') + '-' + gitCommitIdOfDependencies[0..6]
