--- a/build.gradle
+++ b/build.gradle
@@ -699,21 +699,26 @@ project(':wres-config')
 
     dependencies
     {
-        compile 'org.slf4j:slf4j-api:2.0.0-alpha1'
+        implementation 'org.slf4j:slf4j-api:2.0.0-alpha1'
 
         // For Java 9+ compatibility:
-        compile 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3'
+        implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3'
 
-        compile group: 'org.jvnet.jaxb2_commons', name: 'jaxb2-basics-runtime', version: '0.12.0'
+        api group: 'org.jvnet.jaxb2_commons', name: 'jaxb2-basics-runtime', version: '0.12.0'
 
         // To know about @Location
-        compile 'org.glassfish.jaxb:jaxb-core:2.3.0.1'
+        api 'org.glassfish.jaxb:jaxb-core:2.3.0.1'
 
-        runtime 'org.glassfish.jaxb:jaxb-runtime:2.3.3'
+        runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:2.3.3'
 
-        runtime 'org.eclipse.persistence:org.eclipse.persistence.moxy:2.7.8'
+        runtimeOnly 'org.eclipse.persistence:org.eclipse.persistence.moxy:2.7.8'
 
-        testCompile 'junit:junit:4.13.2'
+        // Trying json-values based on vavr, potential replacement for xjc/jaxb.
+        testImplementation 'com.github.imrafaelmerino:json-values:9.0.1'
+
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
+        testRuntimeOnly 'ch.qos.logback:logback-classic:1.3.0-alpha5'
 
         // May help in future with #37380, may need to modify sources
         // available at https://git.apache.org/cxf-xjc-utils.git in dv dir:
@@ -789,6 +794,11 @@ project(':wres-config')
     {
         // XJC generates Java8-unfriendly javadoc. Do not bother generating.
         excludes = ['**/generated/*.java']
+    }
+
+    test
+    {
+        useJUnitPlatform()
     }
 }
 
