--- a/docker-compose-all-roles-with-graphics.yml
+++ b/docker-compose-all-roles-with-graphics.yml
@@ -74,9 +74,9 @@ services:
         image: "${DOCKER_REGISTRY}/wres/wres-worker:20210401-a47266e"
         restart: always
         depends_on:
-         - "broker"
-         - "eventsbroker"
-         - "graphics"
+            broker:
+                condition: service_healthy
+            eventsbroker:
         volumes:
          # For input and output data:
          - /mnt/wres_share:/mnt/wres_share
