docker-compose v2 depends-on requires a condition
Refs #89872

--- a/docker-compose-all-roles-with-graphics.yml
+++ b/docker-compose-all-roles-with-graphics.yml
@@ -77,6 +77,7 @@ services:
             broker:
                 condition: service_healthy
             eventsbroker:
+                condition: service_started
         volumes:
          # For input and output data:
          - /mnt/wres_share:/mnt/wres_share
