Adds a missing unit test stanza to the build.gradle for junit 5.
Refs #80498

--- a/build.gradle
+++ b/build.gradle
@@ -586,6 +586,11 @@ project(':wres-statistics')
 
         testCompile project( ':wres-eventsbroker' )
     }
+
+    // Facilitate unit tests with JUnit
+    test {
+        useJUnitPlatform()
+    }
 }
 
 // Return /etc/system-release file as a string if readable, else empty string.
