--- a/docker-compose-workers-only-with-graphics.template.yml
+++ b/docker-compose-workers-only-with-graphics.template.yml
@@ -13,8 +13,8 @@ services:
         image: "${DOCKER_REGISTRY}/wres/wres-worker:WORKER_IMAGE"
         restart: always
         depends_on:
-         - "eventsbroker"
-         - "graphics"
+            eventsbroker:
+                condition: service_started
         volumes:
          # For input and output data:
          - /mnt/wres_share:/mnt/wres_share
@@ -66,7 +66,8 @@ services:
             wres_net:
     graphics:
         depends_on:
-        - eventsbroker
+            eventsbroker:
+                condition: service_started
         image: "${DOCKER_REGISTRY}/wres/wres-graphics:GRAPHICS_IMAGE"
         restart: always
         # For graphics outputs
