--- a/build.gradle
+++ b/build.gradle
@@ -997,6 +997,15 @@ project(':wres-tasker')
         // For ToStringBuilder
         compile 'org.apache.commons:commons-lang3:3.12.0'
 
+        // These are transitive deps of redisson, remove when redisson updates.
+        // Addresses https://nvd.nist.gov/vuln/detail/CVE-2021-21409
+        implementation 'io.netty:netty-buffer:4.1.63.Final'
+        implementation 'io.netty:netty-common:4.1.63.Final'
+        implementation 'io.netty:netty-codec:4.1.63.Final'
+        implementation 'io.netty:netty-handler:4.1.63.Final'
+        implementation 'io.netty:netty-resolver-dns:4.1.63.Final'
+        implementation 'io.netty:netty-transport:4.1.63.Final'
+
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha5'
         runtime 'org.glassfish.jersey.core:jersey-server:3.0.1'
 
