--- a/compose-workers.yml
+++ b/compose-workers.yml
@@ -10,7 +10,7 @@ networks:
                   gateway: 172.19.254.193
 services:
     worker:
-        image: "${DOCKER_REGISTRY}/wres/wres-worker:20210416-30090b9"
+        image: "${DOCKER_REGISTRY}/wres/wres-worker:20210422-826feab"
         restart: always
         depends_on:
             eventsbroker:
@@ -45,18 +45,18 @@ services:
          - 5673
         ports:
          - 15673:15673
-        image: "${DOCKER_REGISTRY}/wres/wres-eventsbroker:20210414-acc4266"
+        image: "${DOCKER_REGISTRY}/wres/wres-eventsbroker:20210422-826feab"
         restart: always
         volumes:
-         # For qpid work files
-         - /mnt/wres_share/eventsbroker:/container_home
+         # For heap-dump files
+         - /mnt/wres_share:/mnt/wres_share
          # For certificates and keys that correspond to them
          - /mnt/wres_keys:/wres_secrets:ro
         environment:
          # The broker uses heap memory to run and direct memory for messages
-         - QPID_WORK=/container_home/${HOST_NAME}
+         - QPID_WORK=/container_home
          - QPID_JAVA_MEM=-Xms256m -Xmx256m -XX:MaxDirectMemorySize=2048m
-         - QPID_JAVA_GC=-XX:+UseConcMarkSweepGC -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/container_home/${HOST_NAME}
+         - QPID_JAVA_GC=-XX:+UseConcMarkSweepGC -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/mnt/wres_share
         # Broker heap plus direct memory is 2304m in QPID_JAVA_MEM
         mem_limit: 2560m
         cap_drop:
@@ -68,7 +68,7 @@ services:
         depends_on:
             eventsbroker:
                 condition: service_started
-        image: "${DOCKER_REGISTRY}/wres/wres-graphics:20210416-30090b9"
+        image: "${DOCKER_REGISTRY}/wres/wres-graphics:20210422-826feab"
         restart: always
         # For graphics outputs
         volumes:
