--- a/wres-tasker/Dockerfile
+++ b/wres-tasker/Dockerfile
@@ -3,6 +3,8 @@ FROM registry.access.redhat.com/ubi8/ubi:8.3-297.1618432833
 RUN dnf install -y \
     java-11-openjdk-headless-11.0.11.0.9-0.el8_3 \
     unzip-6.0-43.el8 \
+    procps-ng-3.3.15-3.el8_3.1 \
+    iproute-5.3.0-5.el8 \
     && dnf clean all
 
 # See comments in main/worker/root wres Dockerfile
