--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ buildscript
 plugins
 {
     // Static analysis tool sonarqube client
-    id 'org.sonarqube' version '3.1.1'
+    id 'org.sonarqube' version '3.2.0'
 
     //id 'com.github.jacobono.jaxb' version '1.3.5'
     // Above is unmaintained, less gradle-y, below fork has several improvements
@@ -52,7 +52,7 @@ plugins
     id 'com.github.ksoichiro.console.reporter' version '0.6.2'
 
     // To discover library versions with known vulnerabilities
-    id 'org.owasp.dependencycheck' version '6.1.5'
+    id 'org.owasp.dependencycheck' version '6.1.6'
     
     // Task to assist in downloading artifacts
     id "de.undercouch.download" version "4.1.1"
@@ -245,7 +245,7 @@ project(':wres-system')
 
         // to use native postgres copy, need this on compile, otherwise runtime
         compile 'org.postgresql:postgresql:42.2.20'
-        compile 'org.liquibase:liquibase-core:4.3.4'
+        compile 'org.liquibase:liquibase-core:4.3.5'
 
         // Use instead of the bridge between JUL and SLF4J. #60801-283
         runtimeOnly 'com.mattbertolini:liquibase-slf4j:4.0.0'
@@ -361,7 +361,7 @@ project(':wres-io')
         compile 'com.squareup.okhttp3:okhttp:4.10.0-RC1'
 
         // Update vulnerable kotlin-stdlib that okhttp/okio uses
-        compile 'org.jetbrains.kotlin:kotlin-stdlib:1.4.32'
+        compile 'org.jetbrains.kotlin:kotlin-stdlib:1.5.0'
 
         // Because org.postgresql:postgresql uses JUL logging, bridge at runtime
         runtime 'org.slf4j:jul-to-slf4j:2.0.0-alpha1'
@@ -372,7 +372,7 @@ project(':wres-io')
         //JB @ 02/16/17
         testCompile group: 'com.google.guava', name: 'guava-testlib', version: '30.1.1-jre'
 
-        testCompile 'org.liquibase:liquibase-core:4.3.4'
+        testCompile 'org.liquibase:liquibase-core:4.3.5'
 
         // Mocking help
         testCompile 'org.mockito:mockito-core:3.9.0'
@@ -738,6 +738,10 @@ project(':wres-config')
         // commons-beanutils is transitive dependency of jaxb2-basics, has CVEs
         jaxb 'commons-beanutils:commons-beanutils:1.9.4'
 
+        // commons-io is transitive dependency of jaxb2-basics-annotate, has CVE
+        jaxb 'commons-io:commons-io:2.8.0'
+
+
         // jaxb-xjc transitively includes bind-api and jaxb-core
         jaxb 'org.glassfish.jaxb:jaxb-xjc:2.3.4'
         jaxb 'com.github.sabomichal:immutable-xjc-plugin:1.6.2'
@@ -967,7 +971,7 @@ project(':wres-tasker')
         compile 'jakarta.annotation:jakarta.annotation-api:2.0.0'
 
         // For Java 9+ compatibility:
-        compile 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.0'
+        compile 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
 
         // Server library to run a web server:
         compile 'org.eclipse.jetty:jetty-server:11.0.2'
@@ -983,7 +987,7 @@ project(':wres-tasker')
 
         // Needed at compile-time to reference ServletContainer.class and
         // DefaultServlet.class
-        compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:3.0.1'
+        compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:3.0.2'
 
         // To temporarily cache/store-in-RAM job metadata when redis unavailable
         compile 'com.github.ben-manes.caffeine:caffeine:3.0.1'
@@ -1007,11 +1011,11 @@ project(':wres-tasker')
         implementation 'io.netty:netty-transport:4.1.63.Final'
 
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha5'
-        runtime 'org.glassfish.jersey.core:jersey-server:3.0.1'
+        runtime 'org.glassfish.jersey.core:jersey-server:3.0.2'
 
         // Needed to prevent "java.lang.IllegalStateException: InjectionManagerFactory not found."
         // Thanks, https://luohuahuang.org/2017/11/13/jersey-illegalstateexception-injectionmanagerfactory/
-        runtime 'org.glassfish.jersey.inject:jersey-hk2:3.0.1'
+        runtime 'org.glassfish.jersey.inject:jersey-hk2:3.0.2'
 
         testCompile 'junit:junit:4.13.2'
 
@@ -1372,11 +1376,11 @@ dependencies
 
     compile 'javax.ws.rs:javax.ws.rs-api:2.1.1'
     compile 'javax.annotation:javax.annotation-api:1.3.2'
-    compile 'org.eclipse.jetty:jetty-server:9.4.39.v20210325'
-    compile 'org.eclipse.jetty:jetty-webapp:9.4.39.v20210325'
+    compile 'org.eclipse.jetty:jetty-server:9.4.40.v20210413'
+    compile 'org.eclipse.jetty:jetty-webapp:9.4.40.v20210413'
     compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.34'
     // Update the jetty-continuation that above jersey dep depends on
-    compile 'org.eclipse.jetty:jetty-continuation:9.4.39.v20210325'
+    compile 'org.eclipse.jetty:jetty-continuation:9.4.40.v20210413'
 
     compile 'com.github.ben-manes.caffeine:caffeine:3.0.1'
 
