Send a modified declaration when caller says "postInputDone=true"
When done posting to job input paths, e.g. job/12345/input/left,
caller posts form param postInputDone=true to input path, e.g.
job/12345/input, telling tasker that inputs have all been posted. At
this point the tasker modifies the declaration to include all the
data sent to the job and sends the modified declaration as usual.

Do one modification of the declaration String instead of many by
using a List<URI> for each side in one call.

Refs #64736

--- a/build.gradle
+++ b/build.gradle
@@ -964,6 +964,9 @@ project(':wres-tasker')
 {
     dependencies
     {
+        // To allow for programmatic post of input data:
+        compile project( ':wres-config' )
+
         compile project( ':wres-messages' )
         compile 'org.slf4j:slf4j-api:2.0.0-alpha1'
         compile 'com.rabbitmq:amqp-client:5.12.0'
