--- a/build.gradle
+++ b/build.gradle
@@ -363,6 +363,9 @@ project(':wres-io')
         // Update vulnerable kotlin-stdlib that okhttp/okio uses
         compile 'org.jetbrains.kotlin:kotlin-stdlib:1.5.0'
 
+        // To accurately detect mime types of files.
+        implementation 'org.apache.tika:tika-core:1.26'
+
         // Because org.postgresql:postgresql uses JUL logging, bridge at runtime
         runtime 'org.slf4j:jul-to-slf4j:2.0.0-alpha1'
 
