--- a/wres-vis/Dockerfile
+++ b/wres-vis/Dockerfile
@@ -1,5 +1,5 @@
 # From a base image, make updates
-FROM registry.access.redhat.com/ubi8/ubi:8.3-297.1618432833
+FROM registry.access.redhat.com/ubi8/ubi:8.4-199
 
 RUN dnf install -y \
     java-11-openjdk-headless-11.0.11.0.9-0.el8_3 \
