--- a/build.gradle
+++ b/build.gradle
@@ -226,7 +226,7 @@ project(':wres-util')
         testCompile 'junit:junit:4.13.2'
 
         // Mocking help
-        testCompile 'org.mockito:mockito-core:3.9.0'
+        testCompile 'org.mockito:mockito-core:3.10.0'
 
         // super-duper mocking help (mocking static, private methods)
         testCompile 'org.powermock:powermock-api-mockito2:2.0.9'
@@ -283,7 +283,7 @@ project(':wres-datamodel')
 
         implementation 'org.slf4j:slf4j-api:2.0.0-alpha1'
         implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
-        implementation 'com.github.ben-manes.caffeine:caffeine:3.0.1'
+        implementation 'com.github.ben-manes.caffeine:caffeine:3.0.2'
 
         // The following four provide units of measure. If used in public
         // method signatures, they will be upgraded to api (not implementation).
@@ -296,15 +296,15 @@ project(':wres-datamodel')
         compileOnly group: 'net.jcip', name: 'jcip-annotations', version: '1.0'
 
         // Mocking help
-        testImplementation 'org.mockito:mockito-core:3.9.0'
+        testImplementation 'org.mockito:mockito-core:3.10.0'
 
         // JUnit 5 API and runtime
-        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
 
         // Backwards compatibility for JUnit 4 tests
         testCompileOnly 'junit:junit:4.13.2'
-        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.7.1'
+        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.7.2'
     }
     // Facilitate unit tests with JUnit
     test {
@@ -378,7 +378,7 @@ project(':wres-io')
         testCompile 'org.liquibase:liquibase-core:4.3.5'
 
         // Mocking help
-        testCompile 'org.mockito:mockito-core:3.9.0'
+        testCompile 'org.mockito:mockito-core:3.10.0'
 
         // TODO: remove dependence on powermock, remove powermock completely.
         testCompile 'org.powermock:powermock-api-mockito2:2.0.9'
@@ -391,12 +391,12 @@ project(':wres-io')
         testCompile 'com.h2database:h2:1.4.200'
 
         // JUnit 5 API and runtime
-        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
 
         // Backwards compatibility for JUnit 4 tests
         testCompileOnly 'junit:junit:4.13.2'
-        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.7.1'
+        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.7.2'
 
         // In-memory implementation of a java.nio.file abstract file system api
         // to test writing of files without actually writing files on the host machine
@@ -452,7 +452,7 @@ project(':wres-metrics')
 
         testCompile project (':wres-datamodel')
         testCompile 'junit:junit:4.13.2'
-        testCompile 'org.mockito:mockito-core:3.9.0'
+        testCompile 'org.mockito:mockito-core:3.10.0'
     }
 }
 
@@ -475,7 +475,7 @@ project(':wres-statistics')
         // Automatically download and use the correct protobuf compiler
         protoc
         {
-            artifact = 'com.google.protobuf:protoc:3.15.8'
+            artifact = 'com.google.protobuf:protoc:3.17.0'
         }
         // So all IDEs/editors can see generated files, use actual src dir:
         generatedFilesBaseDir = "${generatedDir}"
@@ -574,7 +574,7 @@ project(':wres-statistics')
     dependencies
     {
         compile 'org.slf4j:slf4j-api:2.0.0-alpha1'
-        compile 'com.google.protobuf:protobuf-java:3.15.8'
+        compile 'com.google.protobuf:protobuf-java:3.17.0'
         compile project(':wres-config')
 
         // JMS API ( QPID client implements 1.1, but 1.1 is not available on maven )
@@ -584,8 +584,8 @@ project(':wres-statistics')
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha5'
 
         // JUnit 5 API and runtime
-        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
 
         testCompile project( ':wres-eventsbroker' )
     }
@@ -668,7 +668,7 @@ project(':wres-vis')
         testCompile 'junit:junit:4.13.2'
 
         // Mocking help
-        testCompile 'org.mockito:mockito-core:3.9.0'
+        testCompile 'org.mockito:mockito-core:3.10.0'
 
         testRuntime files('dist/lib/conf')
     }
@@ -727,8 +727,8 @@ project(':wres-config')
         // Trying json-values based on vavr, potential replacement for xjc/jaxb.
         testImplementation 'com.github.imrafaelmerino:json-values:9.0.2'
 
-        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
         testRuntimeOnly 'ch.qos.logback:logback-classic:1.3.0-alpha5'
 
         // May help in future with #37380, may need to modify sources
@@ -851,7 +851,7 @@ project(':wres-messages')
         // Automatically download and use the correct protobuf compiler
         protoc
         {
-            artifact = 'com.google.protobuf:protoc:3.15.8'
+            artifact = 'com.google.protobuf:protoc:3.17.0'
         }
         // So all IDEs/editors can see generated files, use actual src dir:
         generatedFilesBaseDir = "${generatedDir}"
@@ -888,7 +888,7 @@ project(':wres-messages')
     dependencies
     {
         compile 'org.slf4j:slf4j-api:2.0.0-alpha1'
-        compile 'com.google.protobuf:protobuf-java:3.15.8'
+        compile 'com.google.protobuf:protobuf-java:3.17.0'
 
         testCompile 'junit:junit:4.13.2'
     }
@@ -999,25 +999,25 @@ project(':wres-tasker')
         compile 'org.glassfish.jersey.media:jersey-media-multipart:3.0.2'
 
         // To temporarily cache/store-in-RAM job metadata when redis unavailable
-        compile 'com.github.ben-manes.caffeine:caffeine:3.0.1'
+        compile 'com.github.ben-manes.caffeine:caffeine:3.0.2'
 
         // To accurately detect mime types of files.
         compile 'org.apache.tika:tika-core:1.26'
 
         // To persist job metadata while keeping it relatively fast
-        compile 'org.redisson:redisson:3.15.4'
+        implementation 'org.redisson:redisson:3.15.5'
 
         // For ToStringBuilder
         compile 'org.apache.commons:commons-lang3:3.12.0'
 
         // These are transitive deps of redisson, remove when redisson updates.
         // Addresses https://nvd.nist.gov/vuln/detail/CVE-2021-21409
-        implementation 'io.netty:netty-buffer:4.1.63.Final'
-        implementation 'io.netty:netty-common:4.1.63.Final'
-        implementation 'io.netty:netty-codec:4.1.63.Final'
-        implementation 'io.netty:netty-handler:4.1.63.Final'
-        implementation 'io.netty:netty-resolver-dns:4.1.63.Final'
-        implementation 'io.netty:netty-transport:4.1.63.Final'
+        implementation 'io.netty:netty-buffer:4.1.65.Final'
+        implementation 'io.netty:netty-common:4.1.65.Final'
+        implementation 'io.netty:netty-codec:4.1.65.Final'
+        implementation 'io.netty:netty-handler:4.1.65.Final'
+        implementation 'io.netty:netty-resolver-dns:4.1.65.Final'
+        implementation 'io.netty:netty-transport:4.1.65.Final'
 
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha5'
         runtime 'org.glassfish.jersey.core:jersey-server:3.0.2'
@@ -1150,13 +1150,13 @@ project(':wres-events')
         compile group: 'javax.jms', name: 'javax.jms-api', version: '2.0.1'
 
         // JUnit 5 API and runtime
-        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
 
         // Mocking help
-        testCompile 'org.mockito:mockito-core:3.9.0'
+        testCompile 'org.mockito:mockito-core:3.10.0'
         // Mocking final classes
-        testImplementation 'org.mockito:mockito-inline:3.9.0'
+        testImplementation 'org.mockito:mockito-inline:3.10.0'
     }
 
     // Facilitate unit tests with JUnit
@@ -1385,13 +1385,13 @@ dependencies
 
     compile 'javax.ws.rs:javax.ws.rs-api:2.1.1'
     compile 'javax.annotation:javax.annotation-api:1.3.2'
-    compile 'org.eclipse.jetty:jetty-server:9.4.40.v20210413'
-    compile 'org.eclipse.jetty:jetty-webapp:9.4.40.v20210413'
+    compile 'org.eclipse.jetty:jetty-server:9.4.41.v20210516'
+    compile 'org.eclipse.jetty:jetty-webapp:9.4.41.v20210516'
     compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.34'
     // Update the jetty-continuation that above jersey dep depends on
-    compile 'org.eclipse.jetty:jetty-continuation:9.4.40.v20210413'
+    compile 'org.eclipse.jetty:jetty-continuation:9.4.41.v20210516'
 
-    compile 'com.github.ben-manes.caffeine:caffeine:3.0.1'
+    compile 'com.github.ben-manes.caffeine:caffeine:3.0.2'
 
     runtime 'org.glassfish.jersey.core:jersey-server:2.34'
     runtime 'org.glassfish.jersey.containers:jersey-container-jetty-http:2.34'
@@ -1400,10 +1400,10 @@ dependencies
     runtime 'ch.qos.logback:logback-classic:1.3.0-alpha5'
 
 
-    testCompile 'org.junit.jupiter:junit-jupiter-api:5.7.1'
-    testCompile 'org.mockito:mockito-core:3.9.0'
+    testCompile 'org.junit.jupiter:junit-jupiter-api:5.7.2'
+    testCompile 'org.mockito:mockito-core:3.10.0'
 
-    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
+    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
 }
 
 test
