Avoid inserts during retrieval, avoid serialization during reads
Use caffeine for both id-to-feature and feature-to-id.
Promote a straggling int to long. Cache when getting features.

Refs #92749
Fixes #64933

--- a/build.gradle
+++ b/build.gradle
@@ -369,6 +369,9 @@ project(':wres-io')
         // To accurately detect mime types of files.
         implementation 'org.apache.tika:tika-core:1.26'
 
+        // To cache
+        implementation 'com.github.ben-manes.caffeine:caffeine:3.0.2'
+
         // Because org.postgresql:postgresql uses JUL logging, bridge at runtime
         runtime 'org.slf4j:jul-to-slf4j:2.0.0-alpha1'
 
