Nerf the new 15-minute rabbitmq consumer ack timeout
Not sure if this is the right spot, though.

Refs #93209

--- a/wres-broker/nonsrc/rabbitmq.config
+++ b/wres-broker/nonsrc/rabbitmq.config
@@ -8,6 +8,7 @@
     {
         rabbit,
         [
+            { consumer_timeout, false },
             { tcp_listeners, [] },
             { ssl_listeners, [ 5671 ] },
             {
